DevOCL/src/objects/OCLQS_CPI_Tracking__c.object
<CustomObject>
    <description>This object is used for CPI tracking. 
Records from this object will be pushed into JFS CPI system via Integration - Nightly Batch.
Records will be deleted from this objects once its feed into CPI systems, just to control data volume.</description>
    <fields>
        <fullName>Field_Name__c</fullName>
        <description>Field name against which CPI details will be logged</description>
        <label>Field Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <description>Name of the Salesforce Object against which CPI details will be logged</description>
        <label>Object Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Id__c</fullName>
        <description>Parent Object Id</description>
        <label>Parent Id</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Screen_Name__c</fullName>
        <description>Name of the screen against which CPI details will be logged</description>
        <label>Screen Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Action__c</fullName>
        <description>User action - Add/Update/Delete/etc.</description>
        <label>User Action</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_First_Name__c</fullName>
        <label>User First Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <description>User Id against whom CPI details will be logged</description>
        <label>User Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Last_Name__c</fullName>
        <label>User Last Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>CPI Tracking</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CPI Tracking</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CPI Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>